<resources>
    <string name="app_name">Apontamento de Despesas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuário ou Senha Inválidos</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="nova_despesa">Nova Despesa</string>
    <string name="configuracao">Configuracao</string>
    <string name="title_activity_despesa">DespesaActivity</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="selecione">Selecione</string>
    <string name="descricao">Descrição</string>
    <string name="formaPagamento">Forma de Pagamento</string>
    <string name="categoriaDespesa">Categoria Despesa</string>
    <string name="list_despesas">Listar Despesas</string>

    <string-array name="categorias_array">
        <item></item>
        <item>Alimentação</item>
        <item>Padaria</item>
        <item>Farmácia</item>
        <item>Lanche</item>
        <item>Carro</item>
        <item>Transporte Escolar</item>
        <item>Refeição</item>
        <item>Lazer</item>
        <item>Vestuário</item>
        <item>Cursos</item>
    </string-array>

    <string-array name="descricoes_array">
        <item></item>
        <item>Supermercado</item>
        <item>Padaria</item>
        <item>Farmácia</item>
        <item>Lanche</item>
        <item>Carro</item>
        <item>Transporte Escolar</item>
        <item>Refeição</item>
        <item>Lazer</item>
        <item>Vestuário</item>
        <item>Cursos</item>
    </string-array>

    <string-array name="formaPgto_array">
        <item></item>
        <item>Cartão Crédito</item>
        <item>Cartão Débito</item>
        <item>Cheque</item>
        <item>Dinheiro</item>
    </string-array>
    <string name="title_activity_despesas_list">DespesasListActivity</string>
    <string name="relatorios">Relatórios</string>
    <string name="title_activity_relatorio">RelatorioActivity</string>
    <string name="title_activity_configuracao">ConfiguracaoActivity</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <string name="title_activity_alterar_senha">AlterarSenhaActivity</string>
    <string name="title_activity_categoria">CategoriaActivity</string>
    <string name="categorias">Categorias</string>
    <string name="nova_categoria">Nova Categoria</string>
</resources>
