<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    tools:context="projetos.welper.apontamentodespesas.DashboardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nova_despesa"
            android:onClick="selecionarOpcao"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_despesas"
            android:onClick="selecionarOpcao"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relatorios"
            android:onClick="selecionarOpcao"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categorias"
            android:onClick="selecionarOpcao"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selecionarOpcao"
            android:text="Alterar Senha"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sair"
            android:text="Sair"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>
